# grian-ui

./: .gitignore  .gitreview  .pre-commit-config.yaml  .zuul.yaml  README.rst  bindep.txt  manage.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
devstack/: local.conf-all-in-one  plugin.sh  settings
doc/: requirements.txt
doc/source/: conf.py  index.rst
releasenotes/source/: conf.py  index.rst
src/grian_ui/: dev_settings.py  main.py  urls.py  wsgi.py
src/grian_ui/local/local_settings.d/: _3300_grian_ui.py
tests/grian_ui_tests/: __init__.py
tests/grian_ui_tests/functional/: base.py  settings.py  test_main.py
tests/grian_ui_tests/unit/: settings.py
